[project]
name = "ragforensics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
